@@ -4,12 +4,13 @@ import cn.hutool.core.collection.CollUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.oxygen.shortlink.admin.common.biz.user.UserContext;
 import com.oxygen.shortlink.admin.common.convention.exception.ServiceException;
 import com.oxygen.shortlink.admin.common.convention.result.Result;
 import com.oxygen.shortlink.admin.dao.entity.GroupDO;
 import com.oxygen.shortlink.admin.dao.mapper.GroupMapper;
-import com.oxygen.shortlink.admin.remote.ShortLinkRemoteService;
+import com.oxygen.shortlink.admin.remote.ShortLinkActualRemoteService;
 import com.oxygen.shortlink.admin.remote.dto.req.ShortLinkRecycleBinPageReqDTO;
 import com.oxygen.shortlink.admin.remote.dto.resp.ShortLinkPageRespDTO;
 import com.oxygen.shortlink.admin.service.RecycleBinService;
@@ -34,8 +35,7 @@ public class RecycleBinServiceImpl implements RecycleBinService {
     /**
      * 后续重构为 SpringCloud Feign 调用
      */
-    ShortLinkRemoteService shortLinkRemoteService = new ShortLinkRemoteService() {
-    };
+    private final ShortLinkActualRemoteService shortLinkActualRemoteService;
 
     /**
      * 分页查询回收站短链接
@@ -44,7 +44,7 @@ public class RecycleBinServiceImpl implements RecycleBinService {
      * @return 查询数据
      */
     @Override
-    public Result<IPage<ShortLinkPageRespDTO>> pageRecycleBinShortLink(ShortLinkRecycleBinPageReqDTO requestParam) {
+    public Result<Page<ShortLinkPageRespDTO>> pageRecycleBinShortLink(ShortLinkRecycleBinPageReqDTO requestParam) {
         LambdaQueryWrapper<GroupDO> queryWrapper = Wrappers.lambdaQuery(GroupDO.class)
                 .eq(GroupDO::getUsername, UserContext.getUsername())
                 .eq(GroupDO::getDelFlag, 0);
@@ -52,8 +52,7 @@ public class RecycleBinServiceImpl implements RecycleBinService {
         if (CollUtil.isEmpty(groupDOList)) {
             throw new ServiceException("用户无分组信息");
         }
-        List<String> gidList = groupDOList.stream().map(GroupDO::getGid).collect(Collectors.toList());
-        requestParam.setGidList(gidList);
-        return shortLinkRemoteService.pageRecycleBinShortLink(requestParam);
+        requestParam.setGidList(groupDOList.stream().map(GroupDO::getGid).toList());
+        return shortLinkActualRemoteService.pageRecycleBinShortLink(requestParam.getGidList(), requestParam.getCurrent(), requestParam.getSize());
     }
 }
